https://bugs.webkit.org/show_bug.cgi?id=68077 SH4 assemblers doesn't refer to executable memory handle.

Patch by Thouraya ANDOLSI <thouraya.andolsi@st.com> on 2011-09-23
Reviewed by Gavin Barraclough.

* assembler/MacroAssemblerSH4.h:
(JSC::MacroAssemblerSH4::branch8):
* assembler/SH4Assembler.h:
(JSC::SH4Assembler::executableCopy):

Canonical link: https://commits.webkit.org/84684@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95864 268f45cc-cd09-0410-ab3c-d52691b4dbfc